After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698849 - failed to reset xrandr-LVDS1 gamma tables: gamma size is zero
failed to reset xrandr-LVDS1 gamma tables: gamma size is zero
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: color
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-25 15:14 UTC by Rui Matos
Modified: 2013-04-25 15:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Rui Matos 2013-04-25 15:14:30 UTC
When my X220 is docked I turn off the built in LCD and use only and external (DVI) monitor. gnome-settings-daemon issues several of these:

    (gnome-settings-daemon:27380): color-plugin-WARNING **: failed to reset xrandr-LVDS1 gamma tables: gamma size is zero
Comment 1 Richard Hughes 2013-04-25 15:52:54 UTC
commit 56cb6cddd0cf968d8f6fcda0700521325def9e77
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Apr 25 16:51:49 2013 +0100

    color: If the EDID gamma size is zero do not report a warning
    
    If the laptop is docked some BIOSes report a fake EDID.
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=698849