color: If the EDID gamma size is zero do not report a warning

If the laptop is docked some BIOSes report a fake EDID.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=698849